--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "project-rpg",
-    "slug": "project-rpg",
+    "name": "rpjas",
+    "slug": "rpjas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
