--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "expo-font": "~11.4.0",
     "expo-navigation-bar": "~2.3.0",
     "expo-status-bar": "~1.6.0",
+    "js-search": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
