--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~11.4.0",
     "expo-navigation-bar": "~2.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.6.0",
     "js-search": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,9 +29,9 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.6",
-    "react-native-wheel-picker-expo": "^0.5.4"
+    "react-native-wheel-picker-expo": "^0.5.4",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
