--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.15",
+    "expo-blur": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-navigation-bar": "~2.3.0",
     "expo-status-bar": "~1.6.0",
@@ -31,7 +34,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-native-wheel-picker-expo": "^0.5.4",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
