--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-redux": "^7.1.31",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-blur": "~12.4.1",
