--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "expo": "expo start"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
