--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-native-wheel-picker-expo": "^0.5.4",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
