--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-web": "~0.19.6",
     "react-native-wheel-picker-expo": "^0.5.4",
     "react-redux": "^8.1.3",
-    "lottie-react-native": "5.1.6"
+    "lottie-react-native": "5.1.6",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
