--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rolldice-mobile",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -23,23 +23,24 @@
     "expo-blur": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-navigation-bar": "~2.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "js-search": "^2.0.1",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-native-wheel-picker-expo": "^0.5.4",
-    "react-redux": "^8.1.3",
-    "lottie-react-native": "5.1.6",
-    "expo-splash-screen": "~0.20.5"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
